--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ limitations under the License.
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
-<script src="src/index.js"></script>
+<script src="src/index.js" type="module"></script>
 
 
 </html>
