--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@ limitations under the License.
     <div id="main">
         <canvas id="output"></canvas>
         <video id="video" playsinline
-            style="-webkit-transform: scaleX(-1);transform: scaleX(-1); position: absolute; visibility: hidden;width: auto;height: auto;">
+            style="-webkit-transform: scaleX(-1);transform: scaleX(-1); position: fixed; z-index: -10; visibility: hidden;width: 100vw;height: 100vh;">
         </video>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-detection@1.0.2/dist/face-detection.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl@4.20.0/dist/tf-backend-webgl.min.js"></script>
+<script src="src/index.js" type="module"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
-<script src="src/index.js" type="module"></script>
+<!-- <script src="src/index.js"></script> -->
 
 
 </html>
