--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@ limitations under the License.
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
-<script src="src/index.js" type="module"></script>
-<!-- <script src="src/index.js"></script> -->
+<!-- <script src="src/index.js" type="module"></script> -->
+<script src="src/index.js"></script>
 
 
 </html>
