--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@ limitations under the License.
     <!-- <div id="stats" style="display: none;"></div> -->
     <div id="main">
         <canvas id="output"></canvas>
-        <video id="video" playsinline
+        <!-- <video id="video" playsinline
             style="-webkit-transform: scaleX(-1);transform: scaleX(-1); position: fixed; z-index: -10; visibility: hidden;width: 100vw;height: 100vh;">
-        </video>
+        </video> -->
+        <video id="video" playsinline src="vid.mp4" controls style=" position: fixed; z-index: -10; visibility: inherit;"></video>
     </div>
 </body>
 <!-- <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-detection@1.0.2/dist/face-detection.min.js"></script>
